--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NatsukiAI's Website</title>
-  <meta name="description" content="NatsukiAI — a playful osu! bot landing page (static, no React)" />
+  <meta name="description" content="NatsukiAI, a cute osu! bot. I love her a lot."/>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -109,4 +109,5 @@
     });
   </script>
 </body>
+
 </html>
