--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div>
               <h4 class="text-xs uppercase text-pink-600 font-semibold">All-time PP record</h4>
               <p id="ppRecord" class="text-3xl font-extrabold tracking-tight mt-1">0.00 pp</p>
-              <p class="text-sm text-slate-500 mt-1">Recorded on upload: <span class="font-medium"><a href="https://www.youtube.com/watch?v=_qcBVz7Pge4">this video (you can click on it)</a></span></p>            </div>
+              <p class="text-sm text-slate-500 mt-1">Recorded on upload: <span class="font-medium"><a href="https://www.youtube.com/watch?v=AVHberOr3x0">this video (you can click on it)</a></span></p>            </div>
           </div>
         </div>
 
@@ -98,7 +98,7 @@
 
   <script>
     const CONFIG = {
-      PP_RECORD: 4062.30,
+      PP_RECORD: 4599.302,
       SUBSCRIBE_URL: 'https://www.youtube.com/@NatsukisOsuArchive?sub_confirmation=1'
     };
 
@@ -111,5 +111,6 @@
 </body>
 
 </html>
+
 
 
